--- a/style.scss
+++ b/style.scss
@@ -40,3 +40,7 @@
 // Enhancement modules
 @import 'modules/_breakpoints.scss';
 @import 'modules/_print.scss';
+
+// Enhancement modules
+@import 'components/main.scss';
+@import 'components/enter.scss';
