--- a/modules/_vars.scss
+++ b/modules/_vars.scss
@@ -4,7 +4,8 @@ $primary : #000000;
 $base : #DDDDDD;
 $black : #000000;
 $white : #FFF;
-$purple: rgb(116, 0, 172);
+$yellow: #f9d50d;
+$green: #12813f;
 
 $semi-transparent : rgba(255, 255, 255, 0.1);
 $base-darken : darken($base , 90%);
