--- a/style.scss
+++ b/style.scss
@@ -42,5 +42,7 @@
 @import 'modules/_print.scss';
 
 // Enhancement modules
+@import 'components/navigation.scss';
 @import 'components/main.scss';
 @import 'components/enter.scss';
+@import 'components/home.scss';
