--- a/components/main.scss
+++ b/components/main.scss
@@ -1,3 +1,11 @@
+html {
+	overflow: hidden;
+}
 body {
-	background-color: $black;
+	background-color: $yellow;
+	overflow-y: hidden;
+}
+main {
+	height: 100vh;
+	position: relative;
 }
