Style changes for perpetual-art

--- a/style2.scss
+++ b/style2.scss
@@ -23,8 +23,18 @@
 //----------------------------------*/
 
 @import 'partials/_animations.scss';
+@import 'partials/_header.scss';
+@import 'partials/_nav.scss';
+@import 'partials/_sidebar.scss';
 @import 'partials/_main.scss';
+@import 'partials/_hero.scss';
+@import 'partials/_gallery.scss';
+@import 'partials/_home.scss';
+@import 'partials/_details.scss';
+@import 'partials/_booking.scss';
+@import 'partials/_contact.scss';
 @import 'partials/_helpers.scss';
+@import 'partials/_footer.scss';
 
 //----------------------------------*\
 // OBJECTS & MODULES
@@ -40,20 +50,3 @@
 // Enhancement modules
 @import 'modules/_breakpoints.scss';
 @import 'modules/_print.scss';
-
-//----------------------------------*\
-// COMPONENTS
-//----------------------------------*/
-
-@import 'components/_hero.scss';
-@import 'components/_nav.scss';
-@import 'components/_home.scss';
-@import 'components/_header.scss';
-@import 'components/_sidebar.scss';
-@import 'components/_main.scss';
-@import 'components/_gallery.scss';
-@import 'components/_details.scss';
-@import 'components/_booking.scss';
-@import 'components/_contact.scss';
-@import 'components/_helpers.scss';
-@import 'components/_footer.scss';
