--- a/modules/_vars.scss
+++ b/modules/_vars.scss
@@ -12,12 +12,11 @@ $base-darken : darken($base , 90%);
 $back: darken(#F7F6F0, 40%);
 
 // Dimensions
-$logo-width: 250px;
-$base-value: 1rem;
-$base-padding: $base-value;
+$base-value: 16px;
+$base-padding: 2.4rem 3.4rem;
 $base-margin: $base-value;
 $double-base-margin: 2 * $base-value;
-$double-base-padding: 2 * $base-padding;
+$double-base-padding: 2rem;
 $nav-height: 3rem;
 
 //Gallery tiles size
