--- a/modules/_vars.scss
+++ b/modules/_vars.scss
@@ -14,7 +14,7 @@ $back: darken(#F7F6F0, 40%);
 // Dimensions
 $base-value: 16px;
 $base-padding: 2.4rem 3.4rem;
-$base-margin: $base-value;
+$base-margin: 2.5rem;
 $double-base-margin: 2 * $base-value;
 $double-base-padding: 2rem;
 $nav-height: 3rem;
