--- a/partials/_helpers.scss
+++ b/partials/_helpers.scss
@@ -141,6 +141,9 @@
 .no-margin {
 	margin: 0 !important;
 }
+.no-margin-bottom {
+	margin-bottom: 0 !important;
+}
 .margin-auto {
 	margin: 0 auto;
 }
